test/org/midica/testfiles/failing/macro-with-second-param.midica
INCLUDE_FILE inc/instruments.midica

MACRO test1 test2
	0 c /4
	0 c /4
END
